--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myapp",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "cra-template": "1.2.0",
     "emailjs-com": "^3.2.0",
