--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myapp",
-  "homepage": "https://github.com/gladwinjs/Glad-Portfolio",
+  "homepage": "https://gladwinjs.github.io/Glad-Portfolio",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -19,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,9 +43,6 @@
       "last 1 safari version"
     ]
   },
-  "publishConfig": {
-  "registry": "https://npm.pkg.github.com"
-},
   "devDependencies": {
     "gh-pages": "^6.2.0"
   }
