Changes in resume

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gladwin-portfolio",
-  "homepage": "https://gladwinjs.github.io/SahayaGladwinJS-Portfolio",
+  "homepage": "https://gladwinjs.github.io/Glad-Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
