--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "myapp",
+  "name": "gladwin-portfolio",
   "homepage": "https://gladwinjs.github.io/Glad-Portfolio",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "cra-template": "1.2.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-parallax": "^3.5.1",
-    "react-router-dom": "^7.0.2",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.0",
     "react-scripts": "5.0.1",
-    "react-tooltip": "^5.28.0",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.13",
-    "sweetalert2": "^11.15.2",
-    "web-vitals": "^4.2.4"
+    "sweetalert2": "^11.15.3",
+    "tailwind": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0"
+    "gh-pages": "^6.3.0",
+    "tailwindcss": "^3.4.17"
   }
-  
 }
